Fixes #203 - PopulateAForm area will keep its state across calls, refreshes, logins. PopulateAForm expand/collapse arrow fixed

--- a/app/css/style-creator.css
+++ b/app/css/style-creator.css
@@ -9498,7 +9498,7 @@ i {
   color: #5795ba;
   padding: 5px 10px;
   top: 0;
-  right: 4%;
+  right: 0px;
 }
 .all-items-view .push-pull-box .fa-caret-down {
   display: none;
