--- a/app/css/style-runtime.css
+++ b/app/css/style-runtime.css
@@ -9498,7 +9498,7 @@ i {
   color: #71a69c;
   padding: 5px 10px;
   top: 0;
-  right: 4%;
+  right: 0px;
 }
 .all-items-view .push-pull-box .fa-caret-down {
   display: none;
