--- a/app/less/style.less
+++ b/app/less/style.less
@@ -454,7 +454,7 @@ i {
     color: @brand-primary;
     padding: 5px 10px;
     top: 0;
-    right: 4%;
+    right: 0px;
 
     .fa-caret-down {
       display: none;
